setting composite true in all tsconfig inside packages of cli

--- a/packages/locales/tsconfig.json
+++ b/packages/locales/tsconfig.json
@@ -13,7 +13,8 @@
     "moduleResolution": "Bundler",
     "module": "ESNext",
     "target": "ESNext",
-    "allowUnreachableCode": true
+    "allowUnreachableCode": true,
+    "composite": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/*.spec.ts"]
