--- a/packages/locales/tsconfig.json
+++ b/packages/locales/tsconfig.json
@@ -20,7 +20,9 @@
   "include": [
     "src/**/*.ts", 
     "src/**/*.tsx", 
-    "types"
+    "types",
+    "../spec/src/**/*.ts",
+  "../sdk/src/**/*.ts"
   ],
   "exclude": ["src/**/*.spec.ts", "src/**/*.spec.tsx"]
 }
